--- a/pages/bossRegister/bossRegister.wxss
+++ b/pages/bossRegister/bossRegister.wxss
@@ -5,6 +5,13 @@
   background-color: #f5f5f5;
 }
 
+.span-index {
+  display: inline-block;
+  color: #ff6472;
+  margin-right: 5rpx;
+  font-size: 32rpx;
+
+}
 .item {
   width: 100%;
   margin-top: 15rpx;
@@ -65,12 +72,33 @@
 .form>input{flex: 1;font-size: 32rpx;}
 
 .span{
-  padding: 10rpx 20rpx;
   font-size: 34rpx;
-  margin: 24rpx auto 5rpx;
-  width: 400rpx;
+  margin: 0 auto;
+  width: 100%;
   text-align: center;
   border-radius: 16rpx;
   color: #333333;
   font-weight: bold;
+  background-color: #fff;
+  padding: 30rpx 0 18rpx;
+  
+}
+
+.bank-info{position: absolute;
+  background-color: #ffffff;
+  border: 1rpx solid #999;
+  top: 85rpx;
+  border-top-color: #fff;
+  width: 400rpx;
+  right: 66rpx;
+  z-index: 10;
+  border-radius: 6rpx;
+  padding: 10rpx;
+  height: 200rpx;
+  overflow-y: scroll; 
+}
+.bank-info .bank-item{
+  padding: 12rpx 16rpx;
+  font-size: 29rpx;
+  border-bottom: 1rpx dashed #bbbbbb;
 }
