--- a/pages/bossRegister/bossRegister.wxss
+++ b/pages/bossRegister/bossRegister.wxss
@@ -18,7 +18,10 @@
   padding: 20rpx 30rpx;
   background-color: #fff;
 }
-
+.explain{
+  font-size: 25rpx;
+  font-weight: 500;
+}
 .item .title {
   display: flex;
   align-items: center;
@@ -87,13 +90,13 @@
 .bank-info{
   position: absolute;
   background-color: #ffffff;
-  top: 85rpx;
+  top: 100rpx;
   border-top-color: #fff;
   width: 400rpx;
   right: 66rpx;
   z-index: 10;
   border-radius: 6rpx;
-  padding: 10rpx;
+  padding: 15rpx;
   height: 200rpx;
   overflow-y: scroll;
   box-shadow: 0 5rpx 25rpx #ff820050;
