--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -65,7 +65,7 @@
     <image class="img" data-name="driver" src='../../images/nav_dai@2x.png' />
     <view class="text">配送状态</view>
   </view>
-  <view class="item" wx:if="{{roleNo == 0 && true}}">
+  <view class="item" wx:if="{{roleNo == 0}}">
     <image class="img" data-name="recharge" src='../../images/xfcz.jpg' />
     <view class="text">消费充值</view>
   </view>
