--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -56,7 +56,7 @@
   </form>
 
   <!-- <image bindtap="submit" class="login-btn" src='../../images/sign in.png'/> -->
-  <view bindtap="toRecharge" class="recharge">去充值>></view>
+  <view wx:if="{{selected == 0}}" bindtap="toRecharge" class="recharge">去充值>></view>
   <button bindtap="submit" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin-top: 160rpx;background: linear-gradient(to bottom right, rgb(241, 149, 139), #FF4E3E);" type='primary'>登录</button>
 
   
