1. 打印模块的更新(新增\删除\查询)  2. 客户备注 3. 配送完成不显示修改备注框

--- a/components/accountCard/accountCard.wxml
+++ b/components/accountCard/accountCard.wxml
@@ -19,7 +19,7 @@
     <image 
       class="suplierMemo" 
       src="../../images/memo.png" 
-      wx:if="{{isShowMemoIcon}}"
+      wx:if="{{isShowMemoIcon && data.supplyFlag != 5}}"
       catch:tap="showMemoDialogClick"
       data-i="{{index}}"
     />
