--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -7,7 +7,10 @@ page {
   background: linear-gradient(to bottom right, rgb(255, 128, 117), rgb(250, 79, 63));
   font-size: 28rpx;
 }
+.user1-sign {
+  background-color: #fadab7;
 
+  color: #e44c11;}
 /* 商铺卡片 */
 .shop-box, .sales-info-box {
   margin: 0 3%;
