--- a/pages/orderDetail/orderDetail.wxml
+++ b/pages/orderDetail/orderDetail.wxml
@@ -30,7 +30,7 @@
 </view>
 
 
-<TextItems wx:if="{{detailData.memo}}" texrItemData="{{[{label: '店主留言：', content: detailData.memo}]}}" />
+<TextItems wx:if="{{detailData.bossMemo}}" texrItemData="{{[{label: '店主留言：', content: detailData.bossMemo}]}}" />
 <TextItems texrItemData="{{[{label: '商品信息'}]}}" />
 
 <!-- 商品表格 -->
@@ -131,13 +131,13 @@
   <view class="tag" bindtap="copySheetNoClick" data-sheetNo="{{detailData.sheetNo}}">复制</view>
 </TextItems>
 
-<button wx:if="{{supplyFlag == 1 || supplyFlag == 2}}" bindtap="print" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 100rpx auto 0;background: linear-gradient(to bottom right, #3BB0EC, #245EF7);" type='primary'>发货(复打)</button>
+<button wx:if="{{(supplyFlag == 1 || supplyFlag == 2) && authorizeObj.platform !== '1'}}" bindtap="print" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 100rpx auto 0;background: linear-gradient(to bottom right, #3BB0EC, #245EF7);" type='primary'>发货(复打)</button>
 
-<button wx:if="{{supplyFlag == 1 || supplyFlag == 2}}" bindtap="warehouseOut" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 40rpx auto;background: linear-gradient(-120deg, #3BB0EC, #245EF7);" type='primary'>出库</button>
+<button wx:if="{{(supplyFlag == 1 || supplyFlag == 2) && authorizeObj.platform !== '1'}}" bindtap="warehouseOut" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 40rpx auto;background: linear-gradient(-120deg, #3BB0EC, #245EF7);" type='primary'>出库</button>
 
 
 
-<button wx:if="{{supplyFlag == 3}}" bindtap="makeCar" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 160rpx auto 70rpx;background: linear-gradient(120deg, #FFB910, #FF8200);" type='primary'>装车</button>
+<button wx:if="{{supplyFlag == 3 && authorizeObj.platform !== '1'}}" bindtap="makeCar" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 160rpx auto 70rpx;background: linear-gradient(120deg, #FFB910, #FF8200);" type='primary'>装车</button>
 
 <button 
   style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 40rpx auto;background: linear-gradient(to bottom right, rgb(251, 179, 129), #FF5E4E)" 
@@ -151,7 +151,7 @@
 
 
 <!-- 选择司机 Dialog -->
-<view class="print-order-box" wx:if="{{ supplyFlag == 3 && isShowEnterCarDialog && driverArr.length}}">
+<view class="print-order-box" wx:if="{{ supplyFlag == 3 && isShowEnterCarDialog && driverArr.length && authorizeObj.platform !== '1'}}">
   <view class="print-order" >
     <view class="title">请选择配送司机</view>
     <view bindtap="selectDriver" class="d-container">
